--- a/src/com/yasmin/ventanas/Stock2.form
+++ b/src/com/yasmin/ventanas/Stock2.form
@@ -104,12 +104,12 @@
             </Component>
             <Component class="javax.swing.JLabel" name="lUsuario">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Usuario: "/>
+                <Property name="text" type="java.lang.String" value="                                                                                                                         Usuario: "/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="lConnectUser">
+            <Component class="javax.swing.JLabel" name="lConectUser">
               <Properties>
-                <Property name="text" type="java.lang.String" value="user"/>
+                <Property name="text" type="java.lang.String" value=" user"/>
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
@@ -117,12 +117,12 @@
             </Component>
             <Component class="javax.swing.JLabel" name="lTipo">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Tipo: "/>
+                <Property name="text" type="java.lang.String" value="        Tipo: "/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JLabel" name="lTipoConnect">
+            <Component class="javax.swing.JLabel" name="lTipoCUser">
               <Properties>
-                <Property name="text" type="java.lang.String" value="type"/>
+                <Property name="text" type="java.lang.String" value=" type"/>
               </Properties>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
@@ -136,6 +136,9 @@
               <Image iconType="3" name="/com/yasmin/imagenes/arqueoCaja.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bArqueoActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="270" y="0" width="90" height="70"/>
@@ -172,6 +175,9 @@
               <Image iconType="3" name="/com/yasmin/imagenes/verEmpleado.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bEmpleadosActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="450" y="0" width="90" height="70"/>
@@ -227,11 +233,6 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JLabel" name="fondoStock2">
-          <Properties>
-            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\Yasm&#xed;n\Desktop\fondosproyecto2\verde.jpg"/>
-            </Property>
-          </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
           </AuxValues>
